fix:Consertando criação de tokens Jwt.